fix: attempt two to fix landing page content overflowing out of the video background

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,7 +70,7 @@ body {
 
 .landing-page-content {
   z-index: 2;
-  position: fixed;
+  position: absolute;
   top: 75%;
 }
 
